--- a/output/index.html
+++ b/output/index.html
@@ -4,9 +4,9 @@
     <meta charset=UTF-8>
     <meta name=viewport content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1,user-scalable=no">
     <meta http-equiv=X-UA-Compatible content="ie=edge">
-  <link href=/app.5ec07d6f.css rel=stylesheet></head>
+  <link href=./app.5ec07d6f.css rel=stylesheet></head>
 
   <body>
     <div id=root></div>
-  <script src=/vendors.757317c7.chunk.js></script><script src=/app.8fd10180.js></script></body>
+  <script src=./vendors.757317c7.chunk.js></script><script src=./app.c1af7a78.js></script></body>
 </html>
