--- a/output/index.html
+++ b/output/index.html
@@ -4,9 +4,9 @@
     <meta charset=UTF-8>
     <meta name=viewport content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1,user-scalable=no">
     <meta http-equiv=X-UA-Compatible content="ie=edge">
-  <link href=./app.2701f7d9.css rel=stylesheet></head>
+  <link href=/app.4846e78d.css rel=stylesheet></head>
 
   <body>
     <div id=root></div>
-  <script src=./vendors.ccb48553.chunk.js></script><script src=./app.a0efb1f7.js></script></body>
+  <script src=/vendors.ccb48553.chunk.js></script><script src=/app.5e7a68c5.js></script></body>
 </html>
